# MutualFund

./: .gitignore  ARCHITECTURE.es.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_M5_M10.md  IMPLEMENTATION_PLAN_PHASE3.md  README.md  REQUIREMENTS.es.md  REQUIREMENTS.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep
backend/src/mutualfund/: __init__.py  config.py  main.py
backend/src/mutualfund/backtest/: __init__.py  service.py
backend/tests/: conftest.py
backend/tests/backtest/: test_backtest_service.py
backend/tests/execution/: test_sandbox.py
backend/tests/foundation/: test_audit.py  test_clock.py  test_repository_tenancy.py
backend/tests/iam/: test_auth_flow.py  test_bootstrap.py  test_dev_login.py  test_rbac.py
backend/tests/ledger/: test_event_ledger.py  test_performance.py
backend/tests/lifecycle/: test_lifecycle.py  test_qualification.py  test_service.py
backend/tests/marketdata/: test_catalog.py  test_provider_contract.py
backend/tests/marketplace/: test_marketplace_service.py
backend/tests/portfolio/: test_portfolio_service.py
backend/tests/realtime/: test_demo_feed.py  test_end_to_end.py  test_sandbox_session.py
backend/tests/risk/: test_guardrails.py  test_model.py  test_sizing.py
backend/tests/signals/: test_engine.py
backend/tests/strategy/: test_agent.py  test_bot_registry.py  test_registry.py  test_strategies.py
backend/tests/subscription/: test_subscription_service.py
(+71 files in other folders)
