[project]
name = "mutualfund"
version = "0.1.0"
description = "MutualFund — agentic trading-bot marketplace (backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "authlib>=1.3",
    "httpx>=0.27",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mutualfund"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# UP042: allow (str, Enum) — broad compatibility, intentional.
# UP046: keep Generic[T] form rather than PEP 695 type params for clarity.
# B008: FastAPI relies on callables (Query/Depends) in argument defaults.
ignore = ["UP042", "UP046", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
